--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
         <a href="/">Home</a>
         <a href="/about.html">About</a>
         <a href="/doctrines.html">Doctrines</a>
-        <a href="/events.html">Events</a>
+        <a href="/services.html">Services</a>
         <a href="/shop.html">Shop</a>
         <a href="/donate.html">Donate</a>
         <a href="/contact.html">Contact</a>
